# apigelo

./: .dockerignore  .gitignore  Apigelo.sln  Apigelo.sln.DotSettings  Cargo.toml  Dockerfile  README.md  docker-compose.yml
Apigelo/: Dockerfile  Program.cs
Apigelo/Models/: Anime.cs
Apigelo/Properties/: launchSettings.json
Apigelo/Services/: FileService.cs
src/: config.rs  database.rs  main.rs  media.rs  server.rs
